Adiciona animação de slide quando os elementos estão visíveis na tela com IntersectionObserver

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <header>
       <nav>
-        <h1>Evergreen</h1>
+        <h1 class="slide-from-top">Evergreen</h1>
       </nav>
-      <div class="container">
+      <div class="container slide-from-bottom">
         <h2>Revitalize Seu Corpo e Mente com Ginseng</h2>
         <p>
           Cultivamos o ginseng de maneira sustentável, garantindo a pureza e potência de nossos produtos. Com sua rica
@@ -26,10 +26,10 @@
       <h2>Nossos Produtos</h2>
       <div class="product-list">
         <div class="product">
-          <div class="head">
+          <div class="head slide-from-left">
             <img loading="lazy" src="resources/background.webp" alt="#" />
           </div>
-          <div class="body">
+          <div class="body slide-from-right">
             <h3>Suplemento de Ginseng</h3>
             <p>
               Nossos suplementos de ginseng são feitos para aumentar sua energia e melhorar a concentração, sendo
@@ -39,10 +39,10 @@
           </div>
         </div>
         <div class="product">
-          <div class="head">
+          <div class="head slide-from-right">
             <img loading="lazy" src="resources/background.webp" alt="#" />
           </div>
-          <div class="body">
+          <div class="body slide-from-left">
             <h3>Creme Revitalizante de Ginseng</h3>
             <p>
               Nosso creme à base de ginseng ajuda a revitalizar a pele, proporcionando um efeito energizante e
@@ -52,10 +52,10 @@
           </div>
         </div>
         <div class="product">
-          <div class="head">
+          <div class="head slide-from-left">
             <img loading="lazy" src="resources/background.webp" alt="#" />
           </div>
-          <div class="body">
+          <div class="body slide-from-right">
             <h3>Cápsulas de Ginseng</h3>
             <p>
               As cápsulas de ginseng oferecem uma maneira conveniente de obter todos os benefícios da planta, como
@@ -65,10 +65,10 @@
           </div>
         </div>
         <div class="product">
-          <div class="head">
+          <div class="head slide-from-right">
             <img loading="lazy" src="resources/background.webp" alt="#" />
           </div>
-          <div class="body">
+          <div class="body slide-from-left">
             <h3>Chá de Ginseng</h3>
             <p>
               Nosso chá de ginseng é uma forma relaxante e eficaz de aproveitar os benefícios naturais dessa planta,
